layout/layout.css
.head {
    background-color: lightblue;
    padding: 1em;

}

.nav {
	background-color: lightblue;
	padding: 1em;
	border-top: solid;
}

.search {
	position: fixed;
	right: 10;

}




img.logo-head {
    max-width: 15em;

}

footer {
	background-color: lightblue;
	position: fixed;
	bottom: 0;
	min-width: 100%;
}

.foot {
	background-color: lightblue;
	min-width: 100em;
}

